--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="it">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=1200">
     <title>Ragusa Ordini</title>
     <link rel="manifest" href="manifest.json">
     <meta name="theme-color" content="#2563eb"/>
@@ -28,3 +28,4 @@
     <script src="app.js"></script>
 </body>
 </html>
+
